mikec/tests/PASS/assign/51.mc
/*Assign char*/
int main(){

    char a;
    a = 'a';

    char b = 'b';

    char c;
    char c = 'd';
    char c = 'c';

    char d, e, f;
     
    printf("a: %c, b: %c, c: %c", a, b, c);

    return 0;
}
