mikec/tests/FAIL/arithmetic/6.mc
/*int value to char*/
int main(){

    char a;
    a = 97;
    a = c-32;
    
    char b;
    b = 'b';
    b = b - 32;

    printf("A: %c, B: %c", a, b);

    return 0;
}
